--- a/athusrv/angular.json
+++ b/athusrv/angular.json
@@ -34,7 +34,7 @@
               "src/assets"
             ],
             "styles": [
-              "src/styles.scss"
+              "src/global.styles.scss"
             ],
             "scripts": []
           },
@@ -102,7 +102,7 @@
               "src/assets"
             ],
             "styles": [
-              "src/styles.scss"
+              "src/global.styles.scss"
             ],
             "scripts": []
           }
